--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ height: 35px;
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
-    animation: moveInLeft 0.75s ease-out;
+    animation: moveInLeft 0.75s ease-in;
 }
 
 .heading-primary-sub{
@@ -72,7 +72,7 @@ height: 35px;
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
-    animation: moveInRight 0.75s ease-out;
+    animation: moveInRight 0.75s ease-in;
 }
 
 @keyframes moveInLeft{
@@ -101,6 +101,16 @@ height: 35px;
         transform: translateX(0);
     }
 }
+@keyframes moveInBottom{
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
 .btn:link,
 .btn:visited {
@@ -110,7 +120,11 @@ height: 35px;
     display: inline-block;
     border-radius: 100px;
     transition: all 0.2s;
-    
+    position: relative;
+}
+.btn-animated{
+    animation: moveInBottom 0.75s ease-out .5s;
+    animation-fill-mode: backwards;
 }
 .btn:hover{
     transform: translateY(-3px);
@@ -125,4 +139,26 @@ height: 35px;
     color: #777;
     background-color: #fff;
     
+}
+
+.btn::after{
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+    
+}
+
+.btn-white::after{
+    background-color: #fff;
+}
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
 }
