--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,3 +29,24 @@ body{
     
 
 }
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(
+        to right,
+        $color-primary-light,
+        $color-primary-dark
+    );
+    background-clip: none;
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: all .2sec;
+
+    &:hover {
+        transform: skewY(2deg) skewX(15deg);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    }
+}
