--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -50,3 +50,15 @@ body{
         text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     }
 }
+
+.heading-tertiary {
+    font-weight: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.paragraph{
+    font-size: $default-font-size;
+    &:not(:last-child){
+        margin-bottom: 3rem;
+    }
+}
