--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,6 @@
 .u-center-text {text-align:center}
 
-.u-margin-bot-8{margin-bottom:8rem;}
+
+.u-margin-bot-sm{margin-bottom:1.5rem;}
+.u-margin-bot-md{margin-bottom:4rem;}
+.u-margin-bot-lg{margin-bottom:8rem;}
