--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body {
   color: transparent;
   transition: all .2sec; }
   .heading-secondary:hover {
-    transform: skewY(2deg) skewX(15deg);
+    transform: skewY(-2deg) skewX(15deg);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .heading-tertiary {
@@ -189,6 +189,30 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.75); }
 
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s; }
+  .feature-box__icon {
+    font-size: 6rem;
+    margin-bottom: 0.5rem;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    background-clip: none;
+    -webkit-background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.1);
+    background-color: rgba(255, 255, 255, 0.7); }
+  .feature-box__text {
+    background-image: linear-gradient(to right, #28b485, #000, #28b485);
+    background-clip: none;
+    -webkit-background-clip: text;
+    color: transparent; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
@@ -239,3 +263,12 @@ body {
   background-color: #F7F7F7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem; }
+  .section-features > * {
+    transform: skewY(7deg); }
