--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -41,7 +41,7 @@
         transform: rotateY(0deg);
     }
 
-
+    //FRONT styling
 
     &__picture{
         background-size: cover;
@@ -49,6 +49,8 @@
         background-blend-mode: screen;
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
         &--1{
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/nat-5.jpg);
         }
@@ -67,7 +69,7 @@
         color: $color-white;
         position: absolute;
         top: 12rem;
-        right: 2rem;
+        right: 4rem;
         width: 50%;
     }
 
@@ -101,5 +103,28 @@
                 }
             }
         }
+    }
+
+    //BACK styling
+    &__cta{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+    }
+    &__price-box {
+        text-align: center;
+        margin-bottom: 8rem;
+        color:white
+    }
+    &__price-only{
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+    &__price-value{
+        font-size: 6rem;
+        font-weight: 100;
     }
 }
