--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn{
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -8,6 +9,8 @@
         border-radius: 100px;
         transition: all 0.2s;
         position: relative;
+        border: none;
+        cursor: pointer;
         
     }
     &--animated{
@@ -22,7 +25,8 @@
             opacity: 0;
         }
     }
-    &:active{
+    &:active,
+    &:focus{
         transform: translateY(-1px);
         box-shadow: 0 5px 10px rgba($color-black,.2);
     }
