--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -11,6 +11,7 @@
         right: 6rem;
         border-radius: 50%;
         z-index: 2000;
+        box-shadow: 0 1rem 3rem rgba($color-black, .1);
 
     }
     &__background {
@@ -22,15 +23,18 @@
         right: 6.5rem;
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: 1000;
-        transform: scale(50);
+       transition: transform .8s cubic-bezier(0.86, 0, .07, 1);
     }
     &__nav {
-        height: 100vh;
-        width: 100%;
+        height: 0;
+        width: 0;
         position: fixed;
         top: 0;
         right: 0;
+        transform: scale(.25);
         z-index: 1500;
+        opacity: 0;
+        transition: all .8s cubic-bezier(0.68, -0.55, .265, 1.55);
     }
     &__list {
         position: absolute;
@@ -39,6 +43,7 @@
         transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
+        width: 100%;
     }
     &__item{
         margin-right: 1rem;
@@ -46,26 +51,35 @@
     &__link{
         &:link,
         &:visited{
-        display: inline-block;
-        font-size: 3rem;
-        font-weight: 300;
-        padding: 1rem 2rem;
-        color: white;
-        text-decoration: none;
-        text-transform: uppercase;
-        background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%, $color-white 100%);
-        background-size: 220%;
-        transition: all 0.4s;
-        span{
             display: inline-block;
-            margin-right: 1.5rem;
-        }
-        &:hover,
-        &:active{
-            color: $color-primary;
-            background-position: 100%;
-            transform: translateX(1rem);
+            font-size: 3rem;
+            font-weight: 300;
+            padding: 1rem 2rem;
+            color: white;
+            text-decoration: none;
+            text-transform: uppercase;
+            background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%, $color-white 100%);
+            background-size: 220%;
+            transition: all 0.4s;
+            span{
+                display: inline-block;
+                margin-right: 1.5rem;
+            }
+            &:hover,
+            &:active{
+                color: $color-primary;
+                background-position: 100%;
+                transform: translateX(1rem);
+            }
         }
     }
+    &__checkbox:checked ~ &__background{
+         transform: scale(80);
+    }
+    &__checkbox:checked ~ &__nav{
+        opacity: 1;
+        width: 100%;
+        height: 100vh;
+        transform: none;
     }
 }
