--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,14 +6,16 @@
     left: 0;
     background-color: rgba($color-black, .8);
     z-index:9999;
-    &__content {
-        @include absCenter;
-        width: 75%;
-        background-color: $color-white;
-        box-shadow: 0 2rem 4rem rgba($color-black, .2);
-        border-radius: 3px;
-        display: table;
-        overflow: hidden;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
     }
     &__left {
         width: 33.33333%;
@@ -36,5 +38,34 @@
         column-gap: 4rem;
         column-rule: 1px solid $color-grey-light-2;
         hyphens: auto;
+    }
+    &__close{
+        &:link,
+        &:visited {
+            display: inline-block;
+            color: $color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            transition: all .2s;
+            line-height: 1;
+            &:hover{
+                color: $color-primary;
+            }
+        }
+    }
+    &__content {
+        @include absCenter;
+        width: 75%;
+        background-color: $color-white;
+        box-shadow: 0 2rem 4rem rgba($color-black, .2);
+        border-radius: 3px;
+        display: table;
+        overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.5);
+        transition: all 0.4s;
     }
 }
