--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,8 +2,20 @@
 
 
 .u-margin-bot-sm{margin-bottom:1.5rem !important;}
-.u-margin-bot-md{margin-bottom:4rem !important;}
-.u-margin-bot-lg{margin-bottom:8rem !important;}
+.u-margin-bot-md{
+    margin-bottom:4rem !important;
+    @include respond(tab-port) 
+    {
+        margin-bottom: 3rem !important;
+    }
+}
+.u-margin-bot-lg{
+    margin-bottom:8rem !important;
+    @include respond(tab-port) 
+        {
+            margin-bottom: 5rem !important;
+        }
+}
 
 .u-margin-top-sm{margin-top:1.5rem !important;}
 .u-margin-top-md{margin-top:4rem !important;}
