--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,9 +2,15 @@
     background-color: $color-grey-dark-3;
     padding: 10rem 0;
     font-size: 1.4rem;
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
     &__logo {
         width: 15rem;
@@ -14,6 +20,10 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         display: inline-block;
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
     &__list {
         list-style: none;
@@ -50,6 +60,11 @@
         float: right;
         &:not(:last-child){ 
             border-top: 1px solid $color-grey-dark;
+        }
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+
         }
     }
 }
