--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -25,6 +25,9 @@
         &::-webkit-input-placeholder{
             color: $color-grey-dark-2;
         }
+        @include respond(tab-port){
+            width: 100%;
+        }
     }
     
     &__label{
@@ -43,6 +46,10 @@
     &__radio-group{
         width: 49%;
         display: inline-block;
+        @include respond(tab-port){
+            width: 100%;
+            margin-bottom: 1rem;
+        }
     }
     &__radio-input{
         display: none;
