--- a/css/style.css
+++ b/css/style.css
@@ -534,14 +534,27 @@ body {
   .popup__left {
     width: 33.33333%;
     display: table-cell; }
+    @media only screen and (max-width: 56.25em) {
+      .popup__left {
+        width: 100%;
+        display: inline-block; } }
   .popup__right {
     width: 66.66667%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media only screen and (max-width: 56.25em) {
+      .popup__right {
+        width: 100%;
+        padding: 3rem 2rem;
+        display: inline-block; } }
   .popup__img {
     display: block;
-    width: 100%; }
+    width: 100%;
+    display: inline-block; }
+    @media only screen and (max-width: 56.25em) {
+      .popup__img {
+        width: 40%; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -549,6 +562,9 @@ body {
     column-gap: 4rem;
     column-rule: 1px solid #eee;
     hyphens: auto; }
+    @media only screen and (max-width: 56.25em) {
+      .popup__text {
+        column-gap: 1rem; } }
   .popup__close:link, .popup__close:visited {
     display: inline-block;
     color: #777;
