--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -20,16 +20,32 @@
     &__left {
         width: 33.33333%;
         display: table-cell;
+        @include respond(tab-port)
+        {
+            width: 100%;
+            display: inline-block;
+        }
     }
     &__right {
         width: 66.66667%;
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+        @include respond(tab-port)
+        {
+            width: 100%;
+            padding: 3rem 2rem;
+            display: inline-block;
+        }
     }
     &__img {
         display: block;
         width: 100%;
+        display: inline-block;
+         @include respond(tab-port)
+        {
+            width: 40%;            
+        }
     }
     &__text {
         font-size: 1.4rem;
@@ -38,6 +54,11 @@
         column-gap: 4rem;
         column-rule: 1px solid $color-grey-light-2;
         hyphens: auto;
+        @include respond(tab-port)
+        {
+            
+            column-gap: 1rem;
+        }
     }
     &__close{
         &:link,
